--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "style-loader2": "npm:style-loader@2.0.0",
     "tailwind-children": "^0.5.0",
     "tailwindcss": "^3.2.1",
+    "tailwindcss318": "npm:tailwindcss@3.1.8",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "tsd": "^0.24.1",
