--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -38,18 +38,18 @@
     "open:build": "weapp open -p dist/build/mp-weixin"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-components": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060720221018006",
+    "@dcloudio/uni-app": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-components": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3060820221027002",
     "eventemitter3": "^4.0.7",
     "p-queue": "6.6.2",
     "vk-uview-ui": "^1.4.0",
@@ -59,22 +59,25 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.0.16",
-    "@dcloudio/uni-automator": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060720221018006",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060720221018006",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/uni-stacktracey": "3.0.0-alpha-3060820221027002",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3060820221027002",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
+    "postcss-windicss": "^1.0.0",
     "sass": "^1.55.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.2.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.6.0",
+    "unocss": "^0.46.1",
     "vite": "^3.1.8",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.11.4"
+    "weapp-tailwindcss-webpack-plugin": "^1.11.4",
+    "windicss": "^3.5.6"
   }
 }
