--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -75,6 +75,7 @@
     "typescript": "~4.6.0",
     "unocss": "^0.46.1",
     "vite": "^3.1.8",
+    "vite-plugin-windicss": "^1.8.8",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-tailwindcss-webpack-plugin": "^1.11.4",
