--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/types": "^7.17.0",
     "@icebreakers/cli": "^0.0.9",
+    "@icebreakers/eslint-config-ts": "^1.0.1",
     "@icebreakers/readme": "^0.0.1",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^22.0.2",
@@ -130,13 +131,6 @@
     "defu": "6.1.0",
     "del": "^6.1.1",
     "eslint": "8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "6.1.1",
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
