--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "1.11.6",
+  "version": "1.12.0-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -94,9 +94,9 @@
   },
   "homepage": "https://github.com/sonofmagic/weapp-tailwindcss-webpack-plugin#readme",
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@babel/types": "^7.17.0",
+    "@babel/types": "^7.20.2",
     "@icebreakers/cli": "^0.0.9",
     "@icebreakers/eslint-config-ts": "^1.0.2",
     "@icebreakers/readme": "^0.0.1",
@@ -171,12 +171,12 @@
     "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
-    "@babel/generator": "7.19.3",
-    "@babel/parser": "7.19.3",
-    "@babel/traverse": "7.19.3",
+    "@babel/generator": "7.20.4",
+    "@babel/parser": "7.20.3",
+    "@babel/traverse": "7.20.1",
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
-    "postcss": "8.4.16",
+    "postcss": "8.4.19",
     "postcss-selector-parser": "^6.0.10",
     "webpack-sources": "^3.2.3"
   }
