--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "generate:readme": "ts-node scripts/readme/write.ts",
     "format": "yarn prettier --check \"src/**/*.{ts,js}\" -w",
     "format:test": "yarn prettier --check \"test/**/*.test.{ts,js}\" -w",
-    "ls:pack": "npm pack --dry-run"
+    "ls:pack": "npm pack --dry-run",
+    "tw:patch": "ts-node scripts/patcher.ts"
   },
   "repository": {
     "type": "git",
