--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -31,6 +31,6 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.11.6"
+    "weapp-tailwindcss-webpack-plugin": "^1.12.0-beta.1"
   }
 }
