--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        node-version: [10.x, 17.x]
+        node-version: [10.x, 18.x]
         part: [a, b]
         include:
+          - os: ubuntu-latest
+            node-version: 18.x
+            part: a
           - os: ubuntu-latest
             node-version: 16.x
             part: a
