--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -76,7 +76,7 @@
     "vue-loader": "^17.0.0",
     "weapp-ide-cli": "^1.0.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.1-beta.1",
+    "weapp-tailwindcss-webpack-plugin": "^1.12.2",
     "webpack": "^5.74.0"
   }
 }
