--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@types/jest": "^29.2.3",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.189",
+    "@types/lodash-es": "^4.17.6",
     "@types/memory-fs": "^0.3.3",
     "@types/micromatch": "^4.0.2",
     "@types/node": "^18.11.9",
@@ -133,11 +134,11 @@
     "babel-loader": "^8.2.5",
     "chalk": "4.1.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.2",
     "css-loader3": "npm:css-loader@3.6.0",
     "defu": "6.1.1",
     "del": "^6.1.1",
-    "eslint": "8.27.0",
+    "eslint": "8.28.0",
     "esm": "^3.2.25",
     "execa": "5",
     "fast-glob": "^3.2.12",
@@ -145,11 +146,12 @@
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^29.3.1",
     "lodash": "^4.17.21",
-    "memfs": "^3.4.11",
+    "lodash-es": "^4.17.21",
+    "memfs": "^3.4.12",
     "memory-fs": "^0.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
+    "mini-css-extract-plugin": "^2.7.0",
     "mini-css-extract-plugin1": "npm:mini-css-extract-plugin@1.6.2",
-    "miniprogram-automator": "^0.11.0",
+    "miniprogram-automator": "^0.12.0",
     "object-hash": "^3.0.0",
     "open-cli": "^7.1.0",
     "pkg-types": "^1.0.1",
@@ -160,7 +162,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.8.3",
     "simple-functional-loader": "^1.2.1",
@@ -178,7 +180,7 @@
     "typescript-transform-paths": "^3.4.4",
     "vite": "^2.9.15",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.0.0",
+    "webpack": "^5.75.0",
     "webpack4": "npm:webpack@webpack-4"
   },
   "dependencies": {
