--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "uni-app-webpack5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -106,13 +106,17 @@
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.56.1",
     "speed-measure-webpack-plugin": "^1.5.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.5.5",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.0",
-    "weapp-tailwindcss-webpack-plugin": "^1.12.3"
+    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-webpack-plugin": "^1.12.4"
   },
   "browserslist": [
     "Android >= 4.4",
