--- a/demo/packages/components/package.json
+++ b/demo/packages/components/package.json
@@ -1,10 +1,12 @@
 {
   "name": "weapp-tailwindcss-e2e-components",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "weapp-tailwindcss-webpack-plugin e2e test components",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "ls:pack": "npm pack --dry-run"
+    "ls:pack": "npm pack --dry-run",
+    "build": "tsc"
   },
   "keywords": [
     "weapp",
@@ -34,6 +36,8 @@
     "miniprogram-automator": "latest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.3.1",
+    "jest": "^29.3.1",
     "miniprogram-automator": "latest"
   },
   "bugs": {
