--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "@babel/parser": "^7.21.4",
     "@babel/traverse": "^7.21.4",
     "@babel/types": "^7.21.4",
+    "@csstools/postcss-is-pseudo-class": "^3.1.1",
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
     "postcss": "8.4.21",
