--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "deploy:cos": "yarn build && node scripts/deployCos.js"
+    "deploy:cos": "yarn build && ice-deploy -c --dir=build"
   },
   "dependencies": {
     "@docusaurus/core": "2.4.0",
@@ -27,15 +27,15 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.0",
     "@docusaurus/types": "^2.4.0",
-    "@icebreakers/deploy": "^0.1.1",
+    "@icebreakers/deploy": "^0.1.4",
     "@tsconfig/docusaurus": "^1.0.5",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.3",
     "dotenv": "^16.0.3",
-    "sass": "^1.60.0",
-    "sass-loader": "^13.2.1",
-    "tailwindcss": "^3.2.7",
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.7.4"
   },
   "browserslist": {
