--- a/package.json
+++ b/package.json
@@ -203,8 +203,8 @@
     "micromatch": "^4.0.5",
     "postcss": "8.4.22",
     "postcss-selector-parser": "^6.0.11",
-    "semver": "^7.5.0",
-    "tailwindcss-patch": "^1.0.1",
-    "webpack-sources": "^3.2.3"
+    "tailwindcss-patch": "^1.0.2",
+    "webpack-sources": "^3.2.3",
+    "semver": "^7.5.0"
   }
 }
