--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -4,8 +4,10 @@
   "description": "A workflow for better weapp developing.",
   "main": "index.js",
   "scripts": {
-    "test": "gulp test",
-    "dev": "gulp",
+    "dev": "cross-env WATCH=1 gulp",
+    "dev:local": "cross-env WATCH=1 LOCAL=1 gulp",
+    "build:local": "cross-env LOCAL=1 gulp",
+    "build": "gulp",
     "prepare": "weapp-tw patch",
     "open": "weapp open -p"
   },
@@ -33,8 +35,8 @@
     "@types/gulp-sass": "^5.0.0",
     "@types/gulp-util": "^3.0.37",
     "@types/node": "^18.15.13",
-    "@types/yargs": "^17.0.24",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "eslint": "^8.38.0",
     "gulp": "^4.0.0",
@@ -55,13 +57,16 @@
     "postcss": "^8.4.23",
     "postcss-pxtransform": "^3.6.5",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
+    "postcss-rpx-transform": "^1.0.1",
     "prettier": "^2.8.7",
     "sass": "^1.62.0",
+    "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
+    "tailwindcss-rem2px-preset": "^1.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.1",
-    "yargs": "^17.7.1"
+    "weapp-tailwindcss-children": "^0.1.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.2-beta.0"
   }
 }
