--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -67,6 +67,6 @@
     "typescript": "^5.0.4",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.2-beta.0"
+    "weapp-tailwindcss-webpack-plugin": "^2.1.2"
   }
 }
