--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -78,7 +78,7 @@
     "typescript": "~5.0.4",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.2-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.2",
     "webpack": "^5.79.0"
   },
   "engines": {
