--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "dev": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy:github": "cross-env PROVIDER=GITHUB docusaurus deploy",
@@ -33,7 +34,7 @@
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.3",
     "dotenv": "^16.0.3",
-    "sass": "^1.61.0",
+    "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.7.4"
