--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.1.4-beta.0",
+  "version": "2.1.4-beta.1",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -176,7 +176,7 @@
     "open-cli": "^7.2.0",
     "pkg-types": "^1.0.2",
     "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.2.4",
+    "postcss-loader": "^7.3.0",
     "postcss-loader4": "npm:postcss-loader@^4.3.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "prettier": "^2.8.8",
@@ -214,7 +214,7 @@
     "postcss": "8.4.23",
     "postcss-selector-parser": "^6.0.11",
     "semver": "^7.5.0",
-    "tailwindcss-patch": "1.1.0-rc.2",
+    "tailwindcss-patch": "1.1.0",
     "webpack-sources": "^3.2.3"
   }
 }
