--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -53,13 +53,13 @@
     "sass-loader": "^13.2.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
-    "tailwindcss-patch": "^1.1.0-rc.2",
+    "tailwindcss-patch": "^1.1.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^4.9.5",
     "vue-template-compiler": "^2.6.14",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.1",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.2",
     "webpack": "^5.76.1"
   },
   "browserslist": "ios >= 8, chrome >= 47"
