--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -113,13 +113,13 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "tailwindcss-patch": "^1.1.0-rc.2",
+    "tailwindcss-patch": "^1.1.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~4.6.0",
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.2"
   },
   "browserslist": [
     "Android >= 4.4",
