--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -22,10 +22,10 @@
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.3.8",
     "tailwindcss": "^3.3.1",
-    "tailwindcss-patch": "^1.1.0-rc.2",
+    "tailwindcss-patch": "^1.1.0",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.1"
+    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.2"
   }
 }
