--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -32,6 +32,6 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.2"
+    "weapp-tailwindcss-webpack-plugin": "^2.1.4"
   }
 }
