--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -86,7 +86,7 @@
     "vite-plugin-windicss": "^1.8.10",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.1.4-beta.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.1.4",
     "windicss": "^3.5.6"
   }
 }
