--- a/demo/remax-app/project.private.config.json
+++ b/demo/remax-app/project.private.config.json
@@ -1,7 +1,7 @@
 {
   "projectname": "remax-app",
   "setting": {
-    "compileHotReLoad": true
+    "compileHotReLoad": false
   },
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
 }
