--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     },
     "./vite": {
       "types": "./types/framework/vite/index.d.ts",
-      "require": "./dist/vite.js",
-      "import": "./dist/vite.js"
+      "require": "./dist/vite.js"
     },
     "./gulp": {
       "types": "./types/framework/gulp/index.d.ts",
-      "require": "./dist/gulp.js",
-      "import": "./dist/gulp.js"
+      "require": "./dist/gulp.js"
     }
   },
   "scripts": {
@@ -174,7 +172,7 @@
     "miniprogram-automator": "^0.12.0",
     "object-hash": "^3.0.0",
     "open-cli": "^7.2.0",
-    "pkg-types": "^1.0.2",
+    "pkg-types": "^1.0.3",
     "postcss-load-config": "^4.0.1",
     "postcss-loader": "^7.3.0",
     "postcss-loader4": "npm:postcss-loader@^4.3.0",
@@ -198,7 +196,7 @@
     "typescript": "^4.9.5",
     "typescript-transform-paths": "^3.4.6",
     "vinyl": "^3.0.0",
-    "vite": "^4.3.3",
+    "vite": "^4.3.4",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.81.0",
     "webpack4": "npm:webpack@webpack-4"
@@ -212,7 +210,7 @@
     "loader-utils": "^2.0.2",
     "micromatch": "^4.0.5",
     "postcss": "8.4.23",
-    "postcss-selector-parser": "^6.0.11",
+    "postcss-selector-parser": "^6.0.12",
     "semver": "^7.5.0",
     "tailwindcss-patch": "^1.1.1",
     "webpack-sources": "^3.2.3"
