--- a/demo/remax-app/package.json
+++ b/demo/remax-app/package.json
@@ -11,7 +11,7 @@
     "dev": "remax build -w -t wechat",
     "dev:ali": "remax build -w -t ali",
     "dev:toutiao": "remax build -w -t toutiao",
-    "build": "cross-env NODE_ENV=production remax build -t wechat",
+    "_build": "cross-env NODE_ENV=production remax build -t wechat",
     "build:local": "cross-env LOCAL=1 NODE_ENV=production remax build -t wechat",
     "open": "weapp open -p dist/wechat"
   },
