--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -78,7 +78,7 @@
     "vue-loader": "^17.0.1",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^2.2.0-beta.2",
+    "weapp-tailwindcss-webpack-plugin": "^2.2.0",
     "webpack": "^5.79.0"
   }
 }
