--- a/package.json
+++ b/package.json
@@ -198,8 +198,7 @@
     "vinyl": "^3.0.0",
     "vite": "^4.3.5",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.82.0",
-    "webpack4": "npm:webpack@webpack-4"
+    "webpack": "^5.82.0"
   },
   "dependencies": {
     "@babel/generator": "^7.21.4",
