--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,4 +43,5 @@ jobs:
 
       - uses: codecov/codecov-action@v3
         with:
-          files: ./coverage/clover.xml,./coverage-vitest/clover.xml
+          directory: coverage
+          # files: ./coverage/clover.xml,./coverage-vitest/clover.xml
