--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "postcss": "8.4.23",
     "postcss-selector-parser": "^6.0.12",
     "semver": "^7.5.0",
+    "tailwindcss-mangle-core": "^1.0.1",
     "tailwindcss-patch": "^1.1.1",
     "webpack-sources": "^3.2.3"
   }
