--- a/package.json
+++ b/package.json
@@ -137,6 +137,8 @@
     "@types/cssesc": "^3.0.0",
     "@types/esm": "^3.2.0",
     "@types/fs-extra": "^11.0.1",
+    "@types/gulp": "^4.0.10",
+    "@types/gulp-postcss": "^8.0.3",
     "@types/jest": "^29.5.1",
     "@types/loader-utils": "^2.0.3",
     "@types/lodash": "^4.14.194",
@@ -165,6 +167,8 @@
     "execa": "5",
     "fast-glob": "^3.2.12",
     "fs-extra": "^11.1.1",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.1",
     "html-loader": "^4.2.0",
     "html-loader1": "npm:html-loader@1.3.2",
     "jest": "^29.5.0",
