--- a/website/package.json
+++ b/website/package.json
@@ -20,9 +20,10 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "fabric": "^5.3.0",
-    "prism-react-renderer": "^2.0.4",
+    "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -36,10 +37,12 @@
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.3",
     "dotenv": "^16.0.3",
+    "node-loader": "^2.0.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "browserslist": {
     "production": [
