--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
   "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "2.3.0",
+  "version": "2.3.1-beta.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们\nbring tailwindcss jit engine to our miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*"
-      ]
-    }
-  },
   "exports": {
-    "./package.json": "./package.json",
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     },
-    "./*": "./*",
     "./replace": {
       "types": "./dist/replace.d.ts",
       "require": "./dist/replace.js",
@@ -35,10 +26,27 @@
       "require": "./dist/vite.js",
       "import": "./dist/vite.mjs"
     },
+    "./webpack": {
+      "types": "./dist/webpack/index.d.ts",
+      "require": "./dist/webpack.js",
+      "import": "./dist/webpack.mjs"
+    },
     "./gulp": {
       "types": "./dist/gulp/index.d.ts",
       "require": "./dist/gulp.js",
       "import": "./dist/gulp.mjs"
+    },
+    "./*": [
+      "./*",
+      "./*.d.ts"
+    ]
+  },
+  "typesVersions": {
+    "<=4.9": {
+      "*": [
+        "./dist/*",
+        "./*"
+      ]
     }
   },
   "scripts": {
