--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "demo:remove-test-coms": "node scripts/demo/remove-test-coms.js",
     "demo:sync-dist": "node scripts/demo/copy-dist.js",
     "demo:del-dist": "node scripts/demo/del-dist.js",
-    "sync": "cnpm sync weapp-tailwindcss-webpack-plugin",
+    "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss",
     "generate:readme": "ts-node scripts/readme/write.ts",
     "format": "prettier --check \"src/**/*.{ts,js}\" -w",
     "format:test": "prettier --check \"test/**/*.test.{ts,js}\" -w",
