--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -49,74 +49,73 @@
     "test:mp-weixin": "cross-env UNI_PLATFORM=mp-weixin jest -i",
     "open:dev": "weapp open -p dist/dev/mp-weixin",
     "open:build": "weapp open -p dist/build/mp-weixin",
-    "debug:patch": "weapp-tw patch"
+    "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-3071120230427001",
-    "@dcloudio/uni-app-plus": "2.0.2-3071120230427001",
-    "@dcloudio/uni-h5": "2.0.2-3071120230427001",
+    "@dcloudio/uni-app": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-app-plus": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-h5": "2.0.2-alpha-3080120230428001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-360": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-jd": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-lark": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-qq": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-vue": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-3071120230427001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-3071120230427001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-3071120230427001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-3071120230427001",
-    "@dcloudio/uni-stacktracey": "2.0.2-3071120230427001",
-    "@dcloudio/uni-stat": "2.0.2-3071120230427001",
-    "@vant/weapp": "^1.10.5",
-    "@vue/shared": "^3.0.0",
-    "core-js": "^3.25.5",
+    "@dcloudio/uni-i18n": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-360": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-jd": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-lark": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-qq": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-vue": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-quickapp-native": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-quickapp-webview": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-stacktracey": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-stat": "2.0.2-alpha-3080120230428001",
+    "@vant/weapp": "^1.10.18",
+    "@vue/shared": "^3.3.3",
+    "core-js": "^3.30.2",
     "flyio": "^0.6.2",
-    "regenerator-runtime": "^0.13.10",
-    "uview-ui": "2.0.34",
+    "regenerator-runtime": "^0.13.11",
+    "uview-ui": "2.0.36",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-typescript": "^7.18.6",
-    "@babel/runtime": "~7.19.4",
-    "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "2.0.2-3071120230427001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-3071120230427001",
-    "@dcloudio/uni-cli-shared": "2.0.2-3071120230427001",
-    "@dcloudio/uni-migration": "2.0.2-3071120230427001",
-    "@dcloudio/uni-template-compiler": "2.0.2-3071120230427001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-3071120230427001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-3071120230427001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-3071120230427001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-3071120230427001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-3071120230427001",
-    "@types/tailwindcss": "^3.1.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-typescript": "^4.5.17",
-    "@vue/cli-service": "~4.5.0",
-    "autoprefixer": "9",
-    "babel-plugin-import": "^1.11.0",
+    "@babel/plugin-syntax-typescript": "^7.21.4",
+    "@babel/runtime": "~7.21.5",
+    "@dcloudio/types": "3.3.3",
+    "@dcloudio/uni-automator": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-cli-shared": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-migration": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/uni-template-compiler": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-alpha-3080120230428001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-alpha-3080120230428001",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "autoprefixer": "10.4.14",
+    "babel-plugin-import": "^1.13.6",
     "cross-env": "^7.0.2",
-    "jest": "^25.4.0",
+    "jest": "^29.5.0",
     "mini-types": "*",
-    "miniprogram-api-typings": "3.6.0",
-    "postcss": "7",
+    "miniprogram-api-typings": "3.9.1",
+    "postcss": "8.4.23",
     "postcss-comment": "^2.0.0",
     "postcss-rem-to-responsive-pixel": "^5.1.3",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.55.0",
-    "sass-loader": "10",
+    "sass": "^1.62.1",
+    "sass-loader": "13.2.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-css-variables-theme-generator": "^0.3.8",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-patch": "^1.2.1",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "typescript": "~4.6.0",
+    "typescript": "~5.0.4",
     "vue-template-compiler": "^2.6.11",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
